see notes. flicker fix, event removal.
Jumbotron was flickering its text on page load. fix is moving the scrollreveal script tag to head.

projects and about no longer rely on click event project-btn to display. they are available for viewing on page load.

--- a/css/base.css
+++ b/css/base.css
@@ -34,11 +34,9 @@ html {
    }    */
 
 
-/* hide everything  */
 
-#projects, .projects-header,.projects-footer,#about{
-	display: none;
-}
+
+
 
 
 /* logo */
@@ -201,6 +199,10 @@ background-color:  #1fabec;
 }
 
 /* about */
+html.sr .loadhidden{
+	visibility: hidden;
+}
+
 #about{
 	font-family: 'Alef', sans-serif;
 	padding-top:150px;
